@@ -54,6 +54,27 @@ develop and support Conda users.
 [conda]: https://docs.conda.io/en/latest/
 [mambaforge]: https://mamba.readthedocs.io/en/latest/installation.html
 
+### Running Integration Tests
+
+Many of the test suites need to run against external services.  For example,
+the PostgreSQL driver needs to test against a running database!  This can be
+done by setting environment variables to tell tests where the services they
+need can be located.
+
+To standardize the configuration of these services, we use a Docker Compose
+file and a dotenv file.  Services can be started with Docker Compose:
+
+```shell
+$ docker compose up --detach --wait postgres-test
+```
+
+Then, source the .env file at the root of the repo to set the environment
+variables before running tests:
+
+```shell
+$ source .env
+```
+
 ### C/C++
 
 All libraries here contained within one CMake project. To build any
@@ -126,6 +147,15 @@ for details.
 [cmake-compile-commands]: https://cmake.org/cmake/help/latest/variable/CMAKE_EXPORT_COMPILE_COMMANDS.html
 [cmake-prefix-path]: https://cmake.org/cmake/help/latest/variable/CMAKE_PREFIX_PATH.html
 [gtest]: https://github.com/google/googletest/
+
+### C#/.NET
+
+Make sure [.NET Core is installed](https://dotnet.microsoft.com/en-us/download).
+
+```shell
+$ cd csharp
+$ dotnet build
+```
 
 ### Documentation
 
@@ -220,6 +250,35 @@ $ cd java/
 $ mvn clean install
 ```
 
+CI also builds the project with [Checker Framework][checker-framework] and
+[ErrorProne][error-prone] enabled.  These projects require additional
+configuration.  First, create a file `java/.mvn/jvm.config` containing this:
+
+```
+--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+--add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+--add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
+--add-exports jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
+--add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+--add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
+--add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+--add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+--add-opens jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+--add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
+```
+
+This is required so that the above static analysis tools can continue to
+access necessary Java compiler internals to do their job.
+
+Then, build with the `errorprone` Maven profile enabled:
+
+```
+mvn install -Perrorprone
+```
+
+[checker-framework]: https://checkerframework.org/
+[errorprone]: https://errorprone.info/
+
 ### Python
 
 Python libraries are managed with [setuptools][setuptools].  See
@@ -273,6 +332,15 @@ $ cargo test
 ```
 
 ## Opening a Pull Request
+
+Before opening a pull request:
+
+1. Please check if there is a corresponding issue (_and if not, please make one_).
+2. Assign the issue to yourself by commenting "take" in the issue.
+   (_Here's an [example](https://github.com/apache/arrow-adbc/issues/1505#issuecomment-1920134722)._)
+3. At the bottom of the PR description, add `Closes #NNNN` where `NNNN` is the
+   issue number, so that the issue gets linked to your PR properly. ("Fixes"
+   and other keywords that GitHub recognizes are also OK, of course.)
 
 Before opening a pull request, please run the static checks, which are
 enforced via [`pre-commit`](https://pre-commit.com/).  This will run
@@ -348,6 +416,8 @@ $ cd go/adbc && go-licenses report ./... \
   --ignore github.com/apache/arrow/go/v12 \
   --ignore github.com/apache/arrow/go/v13 \
   --ignore github.com/apache/arrow/go/v14 \
+  --ignore github.com/apache/arrow/go/v15 \
+  --ignore github.com/apache/arrow/go/v16 \
   --template ../../license.tpl > ../../LICENSE.txt 2> /dev/null
 ```
 
